@@ -13,7 +13,6 @@
 
 import sys, os
 sys.path.append(os.path.abspath(os.path.join(os.path.dirname(__file__), os.pardir)))
-print sys.path
 
 from django.conf import settings
 settings.configure()
